# Darts-Detector

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  smoke test.txt
.claude/agents/: calibration-scoring.md  cv-detection.md  doc-guardian.md  project-manager.md  test-qa.md
config/: cameras.yaml
docs/: ACCURACY_AND_TESTING.md  AGENT_RULES.md  AGENT_TEAM.md  API_AND_WEBSOCKET_CONTRACT.md  ARCHITECTURE.md  CALIBRATION_SYSTEM.md  CONFIGURATION.md  DEBUG_AND_REPLAY.md  DECISIONS.md  DETECTION_PIPELINE.md  GLOSSARY.md  LATENCY_BUDGET.md  MASTER_PLAN.md  OPEN_QUESTIONS.md  PHASED_IMPLEMENTATION.md  PLUGIN_ARCHITECTURE.md  PROJECT_CHARTER.md  PROJECT_ETHOS.md  REPO_LAYOUT.md  RISKS.md  SCORING_ENGINE.md  VERSIONING.md
schemas/: dart-event.schema.json
src/darts_detector/: __init__.py
src/darts_detector/api_public/: __init__.py
src/darts_detector/capture/: __init__.py  camera.py  list_devices.py  multi_camera.py
src/darts_detector/cli/: __init__.py  camera_picker.py
src/darts_detector/config/: __init__.py  camera_config.py
src/darts_detector/diagnostics/: __init__.py  latency.py
src/darts_detector/ui/camera_picker/: app.py
src/darts_detector/ui/camera_picker/static/: picker.css  picker.js
src/darts_detector/ui/camera_picker/templates/: picker.html
tests/: conftest.py
tests/smoke/: test_phase1_capture.py
