[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "darts-detector"
version = "0.1.0"
description = "Open-source deterministic steel-tip darts detection and scoring"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pygrabber>=0.2",
    "comtypes>=1.4",
]

[project.scripts]
list-devices = "darts_detector.capture.list_devices:main"
camera-picker = "darts_detector.cli.camera_picker:_cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-timeout>=2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/darts_detector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
